# ai-chatbot-backend

./: .flake8  .gitignore  Dockerfile  README.md  \  docker-compose.yml  env.sample  gh-docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  helm-publish.yml
chatbot-core/: custom_embeddings.py  database.py  doc_loaders.py  embedding.py  llm.py  utils.py
chatbotcore/: contextual_chunks.py  custom_embeddings.py  database.py  doc_loaders.py  llm.py
common/: models.py
content/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
content/migrations/: 0001_initial.py  0002_alter_content_deleted_at_alter_content_deleted_by_and_more.py  0002_alter_content_document_type.py  0003_content_document_status.py  0004_alter_content_deleted_at.py
helm/: Chart.yaml  values-test.yaml  values.yaml
helm/templates/: _helpers.tpl
helm/templates/api/: deployment.yaml  ingress.yaml  service.yaml
helm/templates/config/: configmap.yaml  secret.yaml
helm/templates/redis/: deployment.yaml  service.yaml
helm/templates/streamlit/: deployment.yaml  ingress.yaml  service.yaml
helm/templates/worker/: deployment.yaml
main/: celery.py  settings.py  urls.py
main/graphql/: dataloaders.py  enums.py  schema.py
scripts/: run_prod.sh  run_worker.sh
user/: admin.py  dataloaders.py  enums.py  models.py  serializers.py  types.py
user/migrations/: 0001_initial.py  0002_alter_user_user_type.py  0003_rename_user_type_user_department.py
utils/strawberry/: mutations.py  transformers.py
