[tool.poetry]
name = "ai-chatbot"
version = "0.1.0"
description = ""
authors = ["Togglecorp Dev <dev@togglecorp.com>"]
license = "GNU Affero General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
