[tool.poetry]
name = "ai-chatbot"
version = "0.1.0"
description = ""
authors = ["Togglecorp Dev <dev@togglecorp.com>"]
license = "GNU Affero General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.1"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
flake8 = "^7.1.1"
qdrant-client = "^1.11.1"
langchain = "^0.2.15"
langchain-community = "^0.2.14"
langchain-openai = "^0.1.23"
sentence-transformers = "3.0.1"
ollama = "^0.3.2"
python-dotenv = "1.0.1"
langchain-qdrant = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 125
# NOTE: Update in .pre-commit-config.yaml as well
extend-exclude = "(__pycache__|.*snap_test_.*\\.py|.+\\/.+\\/migrations\\/.*)"

[tool.isort]
profile = "black"
multi_line_output = 3
skip = [
    "**/__pycache__",
    "**/snap_test_*.py",
    ".venv/",
    "**/migrations/*.py",
]

[tool.pyright]
exclude = [
    "**/__pycache__",
    "**/snap_test_*.py",
    ".venv/",
    "**/migrations/*.py",
]
reportMissingImports = true
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"
